--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
-
 :root {
     --background-col: hsl(0, 0%, 13%);
     --primary-col: hsl(16, 81%, 58%);
@@ -371,6 +369,16 @@ form input::placeholder {
 .form-bottom button {
     padding: 10px 30px;
     font-weight: bold;
+}
+
+footer a {
+    text-decoration: none;
+    color: var(--light-gray);
+    transition: all 250ms ease;
+}
+
+footer a:hover {
+    color: var(--primary-col);
 }
 
 @media screen and (min-width: 768px) {
